--- a/index.html
+++ b/index.html
@@ -162,45 +162,42 @@
 
   // Recursive function to build the directory tree
   function buildTree(files, parentElement) {
-    const ul = document.createElement("ul"); // Create a new <ul> element for each directory level
+    const ul = document.createElement("ul");
 
     files.forEach(item => {
-      const li = document.createElement("li"); // Create a <li> for each file or directory
+      const li = document.createElement("li");
 
       if (item.type === "file") {
-        // For files, create a proper URL and a clickable link
-        const fileUrl = `https://warvdoh.github.io/Assets/${item.path}`;  // Using GitHub Pages URL
-        li.innerHTML = `<a href="${fileUrl}" target="_blank">${item.name}</a>`; // Link to the file
+        // Modify this part to use GitHub Pages URL for the file
+        const fileUrl = `https://warvdoh.github.io/Assets/${item.path}`;  // Change to GitHub Pages URL
+        li.innerHTML = `<a href="${fileUrl}" target="_blank">${item.name}</a>`;
       } else if (item.type === "dir") {
-        // For directories, just display the directory name
         li.innerHTML = `<strong>${item.name}</strong>`;
-        
         fetch(item.url)  // Fetch the contents of the directory recursively
           .then(response => response.json())
-          .then(data => buildTree(data, li))  // Recursively build the tree inside this <li>
-          .catch(error => console.error("Error loading directory:", error));  // Handle errors for directories
+          .then(data => buildTree(data, li))  // Recursively build the tree
+          .catch(error => console.error("Error loading directory:", error));  // Handle errors
       }
 
-      ul.appendChild(li);  // Append the <li> to the <ul>
+      ul.appendChild(li);
     });
 
-    parentElement.appendChild(ul);  // Finally append the <ul> to the parent element
+    parentElement.appendChild(ul);
   }
 
-  // Fetch repository content and create tree view
+  // Fetch repository content and create the tree view
   fetch(apiUrl)
     .then(response => response.json())
     .then(data => {
-      console.log('Directory data:', data);  // Debugging line to check the fetched data structure
+      console.log('Directory data:', data); // Debugging line
       const treeContainer = document.getElementById("directory-tree");
-      treeContainer.innerHTML = '';  // Clear the "Loading..." message
-      treeContainer.classList.remove("loading"); // Remove the loading class
-      buildTree(data, treeContainer);  // Start building the tree
+      treeContainer.classList.remove("loading"); // Remove loading class once data is loaded
+      buildTree(data, treeContainer);  // Start building the tree with the fetched data
     })
     .catch(error => {
-      console.error('Error fetching files:', error);  // Handle errors during the fetch
+      console.error('Error fetching files:', error); // Handle errors during fetch
       const treeContainer = document.getElementById("directory-tree");
-      treeContainer.innerHTML = "Failed to load directory tree.";  // If fetch fails
+      treeContainer.innerHTML = "Failed to load directory tree.";  // Error message if fetching fails
     });
 </script>
 
